<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/comp"
        android:contentDescription="@string/backgroundimage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#BF321911"
        android:fontFamily="casual"
        android:text="@string/name"
        android:textColor="#ff6f00"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="522dp"
        android:layout_height="295dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="8dp"
        android:background="#A66d4c41"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:baseline="@android:dimen/dialog_min_width_major"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/locationimage"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:srcCompat="@drawable/loc1" />

    <TextView
        android:id="@+id/add"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="openmap"
        android:text="@string/add"
        android:textColor="#ffe0b2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        android:contentDescription="@string/phoneimage"
        app:srcCompat="@drawable/phone"
        tools:layout_height="48dp" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:autoLink="phone"
        android:ems="10"
        android:text="@string/phone"
        android:textColor="#ffe0b2"
        android:textColorLink="#ffe0b2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/mailimage"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:srcCompat="@drawable/mail" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:autoLink="email"
        android:text="@string/mail"
        android:textColor="#ffe0b2"
        android:textColorLink="#ffe0b2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/timeimage"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:srcCompat="@drawable/time" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/time"
        android:textColor="#ffe0b2"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

</android.support.constraint.ConstraintLayout>